
** New user option ~sweeprolog-enable-flymake~

Boolean flag, enabled by default. When customized to nil,
~sweeprolog-mode~ integration with ~flymake~ is disabled.

** New command ~sweeprolog-show-diagnostics~

Wrapper around ~flymake-show-buffer-diagnostics~ for ~sweeprolog-mode~,
bound to ~C-c C-`~.  With a prefix argument, calls
~flymake-show-project-diagnostics~ instead.

* Version 0.5.4 on 2022-10-09

** The manual now has a short description attached to each section
** Fixed issue with loading ~sweep-module~ from a directory with spaces in its name

* Version 0.5.3 on 2022-10-08

** New command ~sweeprolog-align-spaces~ in ~sweeprolog-mode~ buffers

~sweeprolog-align-spaces~ is a new command available in ~sweeprolog-mode~
buffers for updating the whitespace around point according to the
SWI-Prolog convention used in if-then-else constructs where the next
token begins four columns after the start of the previous token.

** New user option ~sweeprolog-enable-cycle-spacing~

In Emacs 29, when this user option is non-nil (the default),
~sweeprolog-align-spaces~ is added to ~cycle-spacing-actions~ such that
pressing ~M-SPC~ once invokes it by default.


* Version 0.5.2 on 2022-10-07

** Fixed bug in detecting the end of a clause with commented fullstops

This version includes a fix in ~sweeprolog-end-of-top-term~, which is
used to locate the end of the current clause.  Previously this
function would get "confused" by in-clause comments that end with a
fullstop (see the added test case in ~sweeprolog-test.el~ for an
example).  Reported by Jan Wielemaker.

* Version 0.5.0 on 2022-10-04

** New special buffer for listing and working with multiple top-levels

=sweep= is now able to create a special buffer that contains a table of
all active top-levels, called the Top-level Menu buffer.  This buffer
has its own special major mode, ~sweeprolog-top-level-menu-mode~, which
provides convenient commands that operate on the listed top-levels.
