@@ -1817,7 +1817,10 @@ Interactively, a prefix arg means to prompt for BUFFER."
     (while (and (or (nth 8 (syntax-ppss))
                     (save-excursion
                       (nth 8 (syntax-ppss (max (point-min)
-                                               (1- (point)))))))
+                                               (1- (point))))))
+                    (save-match-data
+                      (looking-back (rx "=.." (or white "\n"))
+                                    (line-beginning-position))))
                 (not (eobp)))
       (while (and (nth 8 (syntax-ppss)) (not (eobp)))
         (forward-char))
